--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [labeled]
     branches:
-      - develop/* # The branch you want to automatically merge pull request
+      - main/* # The branch you want to automatically merge pull request
 jobs:
   Run-Actions:
     runs-on: ubuntu-latest
