--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -7,8 +7,6 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
-        with:
-          target: minor
-          github-token: ${{ secrets.mytoken }}
+      - name: auto-pull-request-merge
+        uses: KeisukeYamashita/auto-pull-request-merge@v1.0.6
+
