--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -10,5 +10,5 @@ jobs:
       - name: auto-pull-request-merge
         uses: KeisukeYamashita/auto-pull-request-merge@v1.0.6
         with:
-          timeoutSecondes: 120
+          timeoutSeconds: 120
 
