--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -22,6 +22,7 @@ jobs:
         uses: pascalgn/automerge-action@v0.15.3
 
         env:
+          LOG: "TRACE"
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "automerge,!work in progress"
           MERGE_METHOD: "squash"
