--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -17,6 +17,8 @@ jobs:
       pull-requests: write
 
     steps:
-    - uses: actions/labeler@v4
+    - name: Labeler
+      uses: actions/labeler@v4.0.0
+
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
