--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,6 +15,20 @@ on:
       - submitted
   status: {}
 jobs:
+  label:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+
+    steps:
+    - name: Labeler
+      uses: actions/labeler@v4.0.0
+
+      with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+
   automerge:
     runs-on: ubuntu-latest
     steps:
