--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,7 +15,7 @@ on:
       - submitted
   status: {}
 jobs:
-  label:
+  label_and_merge:
 
     runs-on: ubuntu-latest
     permissions:
@@ -29,14 +29,11 @@ jobs:
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
 
-  automerge:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Merge pull requests (automerge-action)
-        uses: pascalgn/automerge-action@v0.15.3
+    - name: Merge pull requests (automerge-action)
+      uses: pascalgn/automerge-action@v0.15.3
 
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_LABELS: "automerge,!work in progress"
-          MERGE_METHOD: "squash"
-          MERGE_COMMIT_MESSAGE: "pull-request-title"
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        MERGE_LABELS: "automerge,!work in progress"
+        MERGE_METHOD: "squash"
+        MERGE_COMMIT_MESSAGE: "pull-request-title"
