--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -29,11 +29,15 @@ jobs:
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
 
-    - name: Merge pull requests (automerge-action)
-      uses: pascalgn/automerge-action@v0.15.3
-
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        MERGE_LABELS: "automerge,!work in progress"
-        MERGE_METHOD: "squash"
-        MERGE_COMMIT_MESSAGE: "pull-request-title"
+  automerge:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Merge pull requests (automerge-action)
+        uses: pascalgn/automerge-action@v0.15.3
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: "automerge,!work in progress"
+          MERGE_METHOD: "squash"
+          MERGE_COMMIT_MESSAGE: "pull-request-title"
+          MERGE_RETRY_SLEEP: "10000"
+          MERGE_RETRIES: "6"
