--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,7 +15,7 @@ on:
       - submitted
   status: {}
 jobs:
-  label_and_merge:
+  label:
 
     runs-on: ubuntu-latest
     permissions:
@@ -41,3 +41,4 @@ jobs:
           MERGE_COMMIT_MESSAGE: "pull-request-title"
           MERGE_RETRY_SLEEP: "10000"
           MERGE_RETRIES: "6"
+    needs: label
